--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
         />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Montserrat:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
     </head>
-    <body style="font-family: Poppins">
+    <body style="font-family: Poppins, sans-serif">
         <div
             style="
                 border: 1px solid #000;
@@ -29,7 +33,12 @@
                 </div>
 
                 <!-- Profil -->
-                <div style="margin-left: 20px; font-family: Mosettrat">
+                <div
+                    style="
+                        margin-left: 20px;
+                        font-family: &quot;Montserrat&quot;, sans-serif;
+                    "
+                >
                     <h2 style="margin-bottom: 5px">
                         Robbanie Hillaly Kurniadien
                     </h2>
@@ -62,12 +71,22 @@
                     saya slalu menjalankan hobby saya. dan saya orang nya tekun,
                     selalu bersemangat, dan telaten.
                 </p>
-                <p style="font-family: TIMES NEW ROMAN"><i>"Tanda kecerdasan adalah kesadaran akan ketidaktahuan sendiri."</i></i>
-                <p><i>- Niccolo Machiavelli.</i></p>
+                <p style="font-family: &quot;Times New Roman&quot;">
+                    <i
+                        >"Tanda kecerdasan adalah kesadaran akan ketidaktahuan
+                        sendiri."</i
+                    >
+                </p>
+                <p><i>- Niccolo Machiavelli</i></p>
             </div>
 
-
-            <div style="display: flex; justify-content: space-between">
+            <div
+                style="
+                    display: flex;
+                    justify-content: space-between;
+                    margin-top: 20px;
+                "
+            >
                 <!-- Box 1: -->
                 <div style="width: 30%; padding: 10px; border: 2px solid #ccc">
                     <legend><strong>Video</strong></legend>
@@ -79,7 +98,7 @@
                     ></iframe>
                 </div>
 
-                <!-- Box 2-->
+                <!-- Box 2 -->
                 <div style="width: 30%; padding: 10px; border: 2px solid #ccc">
                     <legend><strong>Photos</strong></legend>
                     <div
@@ -131,28 +150,31 @@
                 <!-- Box 3 -->
                 <div style="width: 30%; padding: 10px; border: 2px solid #ccc">
                     <legend><strong>My Sosmed</strong></legend>
-                    <div>
-                    <div
-                        style="flex: 1; text-align: center; padding-left: 10px"
-                    >
+                    <div style="text-align: center; padding-left: 10px">
                         <a
                             href="https://www.instagram.com/loxyland/"
                             style="text-decoration: none"
                         >
                             <button class="icon">
-                                <i class="bi bi-instagram">@loxyland</i>
+                                <i class="bi bi-instagram"></i>@loxyland
                             </button>
                         </a>
                         <a
                             href="https://www.tiktok.com/xxfuuu"
                             target="_blank"
-                            style="display: block; margin-bottom: 10px"
-                            ><button><i class="bi bi-tiktok"></i>@xxfuuu</button
-                            ></a
+                            style="
+                                text-decoration: none;
+                                display: block;
+                                margin-bottom: 10px;
+                            "
                         >
+                            <button class="icon">
+                                <i class="bi bi-tiktok"></i>@xxfuuu
+                            </button>
+                        </a>
                         <a
-                            style="text-decoration: none"
                             href="https://github.com/IllalRajinCoding"
+                            style="text-decoration: none"
                         >
                             <button class="icon">
                                 <i class="bi bi-github"></i>@IllalRajinCoding
